--- a/app/src/main/res/layout/activity_logbuch.xml
+++ b/app/src/main/res/layout/activity_logbuch.xml
@@ -12,26 +12,27 @@
         android:id="@+id/ib_backLogbuch"
         android:layout_width="59dp"
         android:layout_height="58dp"
-        android:layout_marginEnd="43dp"
-        android:layout_marginRight="43dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginRight="31dp"
         android:layout_marginBottom="103dp"
         android:background="@null"
+        android:contentDescription="@string/desc"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/tv_Logbucheintrag"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/ic_backbutton_foreground"
-        android:contentDescription="TODO" />
+        app:layout_constraintVertical_bias="0.015"
+        app:srcCompat="@mipmap/ic_backbutton_foreground" />
 
     <TextView
         android:id="@+id/tv_Logbucheintrag"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="13dp"
         android:gravity="center"
-        android:text="Logbucheintrag"
+        android:text="@string/headline_logbuch"
         android:textColor="@android:color/background_dark"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -44,61 +45,76 @@
 
     <TextView
         android:id="@+id/tv_Kapitel"
-        android:layout_width="130dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="hier steht das Kapitel"
+        android:text="@string/tv_kapitelüberschrift"
         android:textColor="@android:color/background_dark"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
+        app:layout_constraintBottom_toTopOf="@+id/iv_piratenboot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.477" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/bt_Bordbuch"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="42dp"
-        android:text="Bordbuch"
-        app:layout_constraintBottom_toTopOf="@+id/bt_Abfrage"
-        android:background="@color/colorButton"
+    <ImageView
+        android:id="@+id/iv_piratenboot"
+        android:layout_width="181dp"
+        android:layout_height="139dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
+        android:contentDescription="@string/desc"
+        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_Kapitel"
+        app:srcCompat="@drawable/piratenschiff" />
 
     <Button
         android:id="@+id/bt_Abfrage"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginBottom="42dp"
-        android:text="Abfrage"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/colorButton"
+        android:text="@string/bt_abfrage"
         app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_Prüfung" />
+        app:layout_constraintTop_toBottomOf="@+id/bt_Prüfung"
+        app:layout_constraintVertical_bias="0.51" />
 
     <Button
         android:id="@+id/bt_Prüfung"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        android:layout_marginBottom="276dp"
-        android:text="Prüfung"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="150dp"
         android:background="@color/colorButton"
+        android:text="@string/bt_prüfung"
+        android:textColor="@android:color/background_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
-        android:textColor="@android:color/background_dark"
-        android:layout_centerHorizontal="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bt_Bordbuch"
         app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/bt_Bordbuch"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorButton"
+        android:text="@string/bt_bordbuch"
+        app:layout_constraintBottom_toTopOf="@+id/bt_Abfrage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_piratenboot" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
