--- a/app/src/main/res/layout/activity_statistik.xml
+++ b/app/src/main/res/layout/activity_statistik.xml
@@ -1,19 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
-    android:background="#AC9270"
     tools:context=".Statistik">
+
+
+    <ImageButton
+        android:id="@+id/ib_backStatistik"
+        android:layout_width="59dp"
+        android:layout_height="58dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginRight="43dp"
+        android:background="@null"
+        android:layout_marginBottom="103dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@mipmap/ic_backbutton_foreground"
+        android:contentDescription="@string/desc" />
+
+    <ImageView
+        android:id="@+id/iv_schatzkiste"
+        android:layout_width="155dp"
+        android:layout_height="110dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/desc"
+        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/schatz3" />
 
     <TextView
         android:id="@+id/tv_schatz_des_hollaenders"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="20dp"
         android:text="@string/tv_schatz"
         android:textColor="@android:color/background_dark"
@@ -23,48 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_diamant2" />
-
-    <ImageView
-        android:id="@+id/iv_diamant1"
-        android:layout_width="94dp"
-        android:layout_height="89dp"
-        android:layout_marginStart="33dp"
-        android:layout_marginLeft="33dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginRight="2dp"
-        android:contentDescription="@string/desc"
-        app:layout_constraintEnd_toStartOf="@+id/iv_diamant2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/diamant2" />
-
-    <ImageView
-        android:id="@+id/iv_diamant3"
-        android:layout_width="94dp"
-        android:layout_height="89dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:contentDescription="@string/desc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_diamant2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/diamant2" />
-
-    <ImageView
-        android:id="@+id/iv_diamant2"
-        android:layout_width="162dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="10dp"
-        android:contentDescription="@string/desc"
-        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/diamant_rot" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_gesamtfortschritt"
