--- a/app/src/main/res/layout/activity_bordbuch.xml
+++ b/app/src/main/res/layout/activity_bordbuch.xml
@@ -12,18 +12,20 @@
         android:id="@+id/ib_backBordbuch"
         android:layout_width="59dp"
         android:layout_height="58dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
         android:layout_marginEnd="43dp"
         android:layout_marginRight="43dp"
         android:layout_marginBottom="103dp"
         android:background="@null"
+        android:contentDescription="@string/desc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/ic_backbutton_foreground"
-        android:contentDescription="@string/desc" />
+        app:srcCompat="@mipmap/ic_backbutton_foreground" />
 
     <TextView
         android:id="@+id/tv_bordbuch"
@@ -45,8 +47,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
+        android:text="@string/tv_kapitelüberschrift"
         android:textColor="@android:color/background_dark"
-        android:text="Hier steht das Kapitel"
         android:textSize="25sp"
         app:layout_constraintTop_toTopOf="@id/tv_bordbuch" />
 
