--- a/app/src/main/res/layout/activity_team_kontaktieren.xml
+++ b/app/src/main/res/layout/activity_team_kontaktieren.xml
@@ -102,7 +102,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="40dp"
         android:text="@string/tv_flaschenpostnachricht"
-        android:textColor="@color/cardview_dark_background"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +143,7 @@
         app:srcCompat="@drawable/schatzkarte" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/iv_flasche"
         android:layout_width="113dp"
         android:layout_height="106dp"
         android:layout_marginStart="1dp"
@@ -158,7 +158,7 @@
         app:srcCompat="@drawable/flasche" />
 
     <Button
-        android:id="@+id/bt_abschicken"
+        android:id="@+id/bt_absenden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
