--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorButton">#DC1313</color>
     <color name ="color_startbutton_rot">#DC1313</color>
-    <color name ="color_seekarte_blau">#61C4B0</color>
+    <color name ="color_seekarte_blau">#33B1FA</color>
     <color name="colorBackground">#E9DDC5</color>
     <color name ="color_start_schwarz">#000000</color>
 
