--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,26 @@
         android:layout_width="406dp"
         android:layout_height="386dp"
         android:layout_marginTop="89dp"
+        android:layout_marginBottom="52dp"
         android:contentDescription="@string/desc"
         android:src="@drawable/logo_lostatc"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@android:style/Widget.DeviceDefault.ProgressBar.Small"
+        android:layout_width="81dp"
+        android:layout_height="81dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginBottom="123dp"
+        android:clickable="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
