--- a/app/src/main/res/layout/activity_seekarte.xml
+++ b/app/src/main/res/layout/activity_seekarte.xml
@@ -259,16 +259,15 @@
                 android:layout_width="85dp"
                 android:layout_height="81dp"
                 android:layout_marginTop="52dp"
-                android:layout_marginEnd="250dp"
-                android:layout_marginRight="250dp"
                 android:layout_marginBottom="55dp"
                 android:contentDescription="@string/desc"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/iv_boot2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.439"
-                app:layout_constraintStart_toEndOf="@+id/ib_insel_grundlagen"
+                app:layout_constraintHorizontal_bias="0.34"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/schiff" />
 
             <ImageView
