--- a/app/src/main/res/layout/activity_team_kontaktieren.xml
+++ b/app/src/main/res/layout/activity_team_kontaktieren.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,6 +9,8 @@
     android:orientation="vertical"
     tools:ignore="ContentDescription"
     tools:context=".Team_kontaktieren">
+
+
 
     <ImageButton
         android:id="@+id/ib_backTeamKontaktieren"
@@ -53,7 +56,8 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/et_name"
+
+        android:hint="Name"
         app:layout_constraintBottom_toTopOf="@+id/et_thema"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -70,7 +74,7 @@
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/et_thema"
+        android:hint="Thema"
         app:layout_constraintBottom_toTopOf="@+id/et_Semester"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -87,7 +91,8 @@
         android:layout_marginBottom="80dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/et_semester"
+
+        android:hint="Semester"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -127,6 +132,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tied_Inhalt"
             android:layout_width="match_parent"
             android:layout_height="151dp"
             android:hint="@string/Text"
